[gd_scene load_steps=19 format=3 uid="uid://b3umnm2u4717e"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_8jo1b"]
[ext_resource type="PackedScene" uid="uid://dhhq5v3uhxh6q" path="res://scenes/coins/coin.tscn" id="2_q6s1s"]
[ext_resource type="PackedScene" uid="uid://bdwdi1nuld7ew" path="res://scenes/coins/coin_orange.tscn" id="3_avgl1"]
[ext_resource type="Texture2D" uid="uid://ngwvnorfid4g" path="res://assets/characters/slime_orange.png" id="3_phfii"]
[ext_resource type="PackedScene" uid="uid://dih6frugu2ap1" path="res://scenes/other/hit_box.tscn" id="4_a8jqy"]
[ext_resource type="PackedScene" uid="uid://7c4ekjg1peod" path="res://scenes/coins/coin_red.tscn" id="4_bvo3e"]
[ext_resource type="PackedScene" uid="uid://cd3mn3tbggrve" path="res://scenes/other/hurt_box.tscn" id="5_3ehod"]
[ext_resource type="PackedScene" uid="uid://dbju3dcddjty4" path="res://scenes/other/progress_bar.tscn" id="6_rlrho"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0nnqh"]
radius = 4.0
height = 14.0

[sub_resource type="Animation" id="Animation_jmdl2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_owlvs"]
resource_name = "die"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 12), Vector2i(1, 12), Vector2i(2, 12), Vector2i(3, 12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.9, 20),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_gf7ia"]
resource_name = "walk_down"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8y3kp"]
resource_name = "walk_left"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_yad2i"]
resource_name = "walk_right"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_xt3ky"]
resource_name = "walk_up"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qdffe"]
_data = {
"RESET": SubResource("Animation_jmdl2"),
"die": SubResource("Animation_owlvs"),
"walk_down": SubResource("Animation_gf7ia"),
"walk_left": SubResource("Animation_8y3kp"),
"walk_right": SubResource("Animation_yad2i"),
"walk_up": SubResource("Animation_xt3ky")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bgll2"]
radius = 4.0
height = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i7b3x"]
radius = 7.0
height = 26.0

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
y_sort_enabled = true
collision_layer = 4
collision_mask = 6
platform_floor_layers = 4278190080
script = ExtResource("1_8jo1b")
coin_yellow = ExtResource("2_q6s1s")
coin_orange = ExtResource("3_avgl1")
coin_red = ExtResource("4_bvo3e")
yellow_prob = 0.2
orange_prob = 0.6
red_prob = 0.2

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -6)
texture = ExtResource("3_phfii")
hframes = 7
vframes = 13
frame = 21

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_0nnqh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qdffe")
}
autoplay = "walk_down"

[node name="HitBox" parent="." instance=ExtResource("4_a8jqy")]
position = Vector2(0, -6)
collision_layer = 4
collision_mask = 2
damage = 12

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bgll2")

[node name="HurtBox" parent="." instance=ExtResource("5_3ehod")]
position = Vector2(0, -6)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_i7b3x")

[node name="DisableTimer" parent="HurtBox" index="1"]
wait_time = 0.5

[node name="ProgressBar" parent="." instance=ExtResource("6_rlrho")]
offset_top = -17.0
offset_bottom = -15.0

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="HurtBox/FlashRedTimer" to="." method="_on_flash_red_timer_timeout"]
[connection signal="timeout" from="HurtBox/FlashRedTimer" to="HurtBox" method="_on_flash_red_timer_timeout"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockback_timer_timeout"]

[editable path="HitBox"]
[editable path="HurtBox"]
